--- a/applications/processor/splitter-processor/pom.xml
+++ b/applications/processor/splitter-processor/pom.xml
@@ -27,7 +27,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.springframework.cloud.function</groupId>
+            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>splitter-function</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
