--- a/applications/processor/transform-processor/pom.xml
+++ b/applications/processor/transform-processor/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.cloud.function</groupId>
+            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>spel-function</artifactId>
             <version>${java-functions.version}</version>
         </dependency>
