--- a/applications/stream-applications-build/stream-applications-descriptor/pom.xml
+++ b/applications/stream-applications-build/stream-applications-descriptor/pom.xml
@@ -7,8 +7,8 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>stream-apps-descriptor</artifactId>
-    <name>stream-apps-descriptor</name>
+    <artifactId>stream-applications-descriptor</artifactId>
+    <name>stream-applications-descriptor</name>
     <packaging>jar</packaging>
 
     <properties>
