--- a/applications/stream-applications-build/stream-applications-docs/pom.xml
+++ b/applications/stream-applications-build/stream-applications-docs/pom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>stream-apps-docs</artifactId>
-	<name>stream-apps-docs</name>
+	<artifactId>stream-applications-docs</artifactId>
+	<name>stream-applications-docs</name>
 	<description>Stream Apps Docs</description>
 	<parent>
 		<groupId>org.springframework.cloud.stream.app</groupId>
