--- a/applications/stream-applications-build/pom.xml
+++ b/applications/stream-applications-build/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
         <artifactId>stream-applications-core</artifactId>
-        <version>3.0.0.BUILD-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../stream-applications-core</relativePath>
     </parent>
 
