--- a/applications/stream-applications-core/common/stream-applications-metadata-store-common/pom.xml
+++ b/applications/stream-applications-core/common/stream-applications-metadata-store-common/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>stream-applications-core</artifactId>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <version>3.0.0.BUILD-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath>../..</relativePath>
     </parent>
 
