--- a/applications/sink/counter-sink/pom.xml
+++ b/applications/sink/counter-sink/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>counter-sink</artifactId>
-    <version>3.0.0.BUILD-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>counter-sink</name>
     <description>counter sink apps</description>
     <packaging>jar</packaging>
