--- a/applications/processor/bridge-processor/pom.xml
+++ b/applications/processor/bridge-processor/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>bridge-processor</artifactId>
     <name>bridge-processor</name>
     <description>bridge processor apps</description>
-    <version>3.0.0.BUILD-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
