--- a/applications/sink/counter-sink/pom.xml
+++ b/applications/sink/counter-sink/pom.xml
@@ -11,8 +11,8 @@
 
     <parent>
         <groupId>org.springframework.cloud.stream.app</groupId>
-        <artifactId>stream-apps-parent</artifactId>
-        <version>3.0.0.BUILD-SNAPSHOT</version>
+        <artifactId>stream-applications-core</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
         <relativePath/>
     </parent>
 
