--- a/applications/stream-applications-build/pom.xml
+++ b/applications/stream-applications-build/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>stream-applications-build</artifactId>
-    <version>Fahrenheit.BUILD-SNAPSHOT</version>
+    <version>2020.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
