--- a/applications/stream-applications-core/pom.xml
+++ b/applications/stream-applications-core/pom.xml
@@ -27,7 +27,7 @@
         <spring-cloud-dependencies.version>Hoxton.SR2</spring-cloud-dependencies.version>
         <spring-cloud-stream-dependencies.version>Horsham.SR2</spring-cloud-stream-dependencies.version>
         <java-cfenv-boot.version>2.1.1.RELEASE</java-cfenv-boot.version>
-        <java-functions.version>1.0.0.BUILD-SNAPSHOT</java-functions.version>
+        <java-functions.version>1.0.0-SNAPSHOT</java-functions.version>
         <prometheus-rsocket.version>0.9.0</prometheus-rsocket.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-checkstyle-plugin.version>3.1.0</maven-checkstyle-plugin.version>
