--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.springframework.cloud.stream.app</groupId>
     <artifactId>stream-applications</artifactId>
-    <version>3.0.0.BUILD-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <name>stream-applications</name>
     <description>Functions and Infrastructure for stream applications</description>
     <packaging>pom</packaging>
