--- a/applications/processor/splitter-processor/pom.xml
+++ b/applications/processor/splitter-processor/pom.xml
@@ -33,9 +33,9 @@
             <version>${java-functions.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.pivotal.java.function</groupId>
+            <groupId>org.springframework.cloud.fn</groupId>
             <artifactId>payload-converter-function</artifactId>
-            <version>${java-functions.version}</version>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
