Add Header Enricher function and generate processor apps. Add Redis consumer and gengerate sink apps.
Resolves https://github.com/spring-cloud/stream-applications/issues/22
Resolves https://github.com/spring-cloud/stream-applications/issues/23

--- a/applications/processor/pom.xml
+++ b/applications/processor/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>bridge-processor</module>
+        <module>header-enricher-processor</module>
         <module>splitter-processor</module>
         <module>filter-processor</module>
         <module>transform-processor</module>
