--- a/applications/processor/filter-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/processor/filter-processor/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,1 +1,1 @@
-configuration-properties.classes=SpelFunctionProperties
+configuration-properties.classes=org.springframework.cloud.fn.spel.SpelFunctionProperties
