--- a/applications/sink/redis-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
+++ b/applications/sink/redis-sink/src/main/resources/META-INF/dataflow-configuration-metadata-whitelist.properties
@@ -1,2 +1,5 @@
-configuration-properties.classes=org.springframework.cloud.fn.consumer.redis.RedisConsumerProperties
+configuration-properties.classes=org.springframework.cloud.fn.consumer.redis.RedisConsumerProperties, \
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties, \
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Pool, \
+  org.springframework.boot.autoconfigure.data.redis.RedisProperties$Sentinel
 
